--- a/app/src/main/res/layout/activity_play_audio.xml
+++ b/app/src/main/res/layout/activity_play_audio.xml
@@ -1,11 +1,48 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PlayAudio">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageViewAlbumArt"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="#000000"
+        android:src="@drawable/default_album_art"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp" />
+
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Audio Title"
+        android:textSize="24sp"
+        android:layout_below="@id/imageViewAlbumArt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+<!--    android:thumb="@drawable/uXKqF"-->
+    <SeekBar
+        android:id="@+id/seekBarProgress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/textViewTitle"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
 
 
+        android:progressBackgroundTint="#ECECEC"
+        android:progressTint="#FF4081"
+        android:layout_centerHorizontal="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/buttonPlayPause"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/play"
+        android:background="?android:selectableItemBackgroundBorderless"
+        android:layout_below="@id/seekBarProgress"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
