--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -39,16 +39,18 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:visibility="gone"
+    <LinearLayout
         android:id="@+id/lytGame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:text="@string/catch_a_lie"
             android:textSize="20sp" />
 
@@ -58,6 +60,7 @@
             android:gravity="center_vertical">
 
             <RadioButton
+                android:id="@+id/radio1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -73,6 +76,7 @@
             android:gravity="center_vertical">
 
             <RadioButton
+                android:id="@+id/radio2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -88,6 +92,7 @@
             android:gravity="center_vertical">
 
             <RadioButton
+                android:id="@+id/radio3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -101,10 +106,11 @@
             android:id="@+id/btnSubmit"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:background="@drawable/button_background"
-            android:text="@string/any_other_topic"
+            android:text="@string/submit"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
